--- a/School Tsa Coding things/base.html
+++ b/School Tsa Coding things/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>NOORALDDEN QANDEEL says "hi"</title>
+	<title> Minecraft>Fortnite </title>
 </head>
 <body>
 
