--- a/School Tsa Coding things/base.html
+++ b/School Tsa Coding things/base.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Minecraft>Fortnite </title>
+	<title>Electric Wheels.</title>
 </head>
 <body>
 
 </body>
 </html>
-
