--- a/School Tsa Coding things/base.html
+++ b/School Tsa Coding things/base.html
@@ -8,7 +8,7 @@ p {background-color: red;}
 </style>
 </head>
 <body>
-<h1 style="text-align: center;">Electric Bikes <br> Information Page</h1>
+<h1 style="text-align: center;">Power Prowlers <br> Information Page</h1>
 <p>This is a prologue...</p>
 </body>
 </html>
