--- a/School Tsa Coding things/base.html
+++ b/School Tsa Coding things/base.html
@@ -4,11 +4,11 @@
 <style>
 body {background-color: powderblue;}
 h1 {background-color:rgb(rgba(102, 255, 0, 0.308));}
-p {background-color: red;}
+p {background-color: rgb(0, 238, 255);}
 </style>
 </head>
 <body>
 <h1 style="text-align: center;">Power Prowlers <br> Information Page</h1>
-<p>This is a prologue...</p>
+<p>This is a prologue... dat we should not have</p>
 </body>
 </html>
