--- a/School Tsa Coding things/base.html
+++ b/School Tsa Coding things/base.html
@@ -3,8 +3,8 @@
 <head>
 <style>
 body {background-color: powderblue;}
-h1 {background-color:rgb(rgba(102, 255, 0, 0.308));}
-p {background-color: red;}
+h1 {color:rgb(rgba(102, 255, 0, 0.308));}
+p {color: red;}
 </style>
 </head>
 <body>
